# cpp-2021

./: .gitignore  .gitmodules  CMakeLists.txt  Calculator.cpp  README.md  Stack.cpp  Stack.h  commands.cpp  commands.h
.github/buildsteps/linux/: build.sh  install-dependencies.sh
.github/buildsteps/macos/: build.sh  install-dependencies.sh  run-unittests.sh
.github/buildsteps/windows/: build.bat  install-dependencies.bat
.github/workflows/: ci.yml
2/: CMakeLists.txt  Calculator.h  Stack.cpp  Stack.h  commands.cpp  commands.h  desc  exceptions.cpp  exceptions.h  main.cpp  vcpkg.json
2/src/: Calculator.h  commands.cpp  commands.h  exceptions.h  main.cpp
2/tests/: tests_of_calculator.cpp
3/: CMakeLists.txt  LinkedList.h  tests.cpp  vcpkg.json
